# aidoc-ex

./: .python-version  README.md  pyproject.toml
src/: main.py  storage.py  strategy.py
tests/: test_main.py  test_storage.py
